--- a/ROC_and_PR.ipynb
+++ b/ROC_and_PR.ipynb
@@ -28,6 +28,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "<h2>PR and ROC</h2>\n",
+        "I've created custom CNN models of famous CNN architectures including resnet, vgg, inception and xception. I trained them on leukemia classification then compared their performance using PR and ROC curves for a research project."
+      ],
+      "metadata": {
+        "id": "QGw5QFOPmV48"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import torchvision.transforms as transforms\n",
@@ -63,7 +73,7 @@
         "id": "ePkj8_tIdBt-",
         "outputId": "aaa99be1-1347-4c67-9bd2-6d40d3424f9a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +265,7 @@
       "metadata": {
         "id": "v0HFTRVPzs4j"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -303,7 +313,7 @@
         "id": "8_ajntYwk2pC",
         "outputId": "38ebc2cf-d58f-44d0-d1fe-b094179a72a7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,7 +388,7 @@
       "metadata": {
         "id": "VK604Egz4w1A"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +437,7 @@
           "height": 396
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -489,7 +499,7 @@
           "height": 396
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
