--- a/ROC_and_PR.ipynb
+++ b/ROC_and_PR.ipynb
@@ -31,10 +31,19 @@
       "cell_type": "markdown",
       "source": [
         "<h2>PR and ROC</h2>\n",
-        "I've created custom CNN models of famous CNN architectures including resnet, vgg, inception and xception. I trained them on leukemia classification then compared their performance using PR and ROC curves for a research project."
+        "I've created custom CNN models of famous CNN architectures including resnet, vgg, inception and xception. Trained them on leukemia classification then compared their performance using PR and ROC curves for a research project."
       ],
       "metadata": {
         "id": "QGw5QFOPmV48"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h2>Data preprocessing</h2>"
+      ],
+      "metadata": {
+        "id": "7enLHYbR-kSY"
       }
     },
     {
@@ -83,6 +92,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h2>Defining Model Architectures</h2>"
+      ],
+      "metadata": {
+        "id": "ElXEpVq5-qiN"
+      }
     },
     {
       "cell_type": "code",
@@ -269,6 +287,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "<h2>Loading Trained Model Parameters</h2>"
+      ],
+      "metadata": {
+        "id": "uHho4jd5-x3j"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import torch\n",
@@ -340,6 +367,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "<h2>Calculating AUC score</h2>"
+      ],
+      "metadata": {
+        "id": "Nc0Ze-vg-4rj"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -390,6 +426,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h2>Plot PR and ROC curves</h2>"
+      ],
+      "metadata": {
+        "id": "srEdzjoN_Gzw"
+      }
     },
     {
       "cell_type": "code",
